reduce synonym input field with to prevent overflow

--- a/styles.css
+++ b/styles.css
@@ -566,7 +566,7 @@ cursor: pointer;
 }
 
 #synonymInput {
-    width: 99%;
+    width: 97%;
     margin-top: 20px;
 }
 
